Fixed someFireFox specific CSS for SEO product page

--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -3,7 +3,7 @@
                     <?php  foreach($this->resultset as $key => $value) { ?>
                     <h1><?php echo( $value['product_name'] ); ?></h1>
                     
-                    <div class="splash container single backshadow">
+                    <div class="splash container single backshadow product">
 
                         <div class="header">
                             
