Worked with Javascript file for cart, and been fixing CSS for Product boxes, also made a fresh dump of the database

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -69,9 +69,14 @@
                             </div>
 
                             <h3><a href="<?php echo $this->basePath('/produkter/roll_up_classic') . PHP_EOL; ?>" title="Roll-Up Classic">Roll-Up Classic</a></h3>
-                            <h4><a href="<?php echo $this->basePath('/tillverkare/expolinc') . PHP_EOL; ?>" title="Expolinc">Expolinc</a></h4>
-                            <span class="left block">&nbsp;/&nbsp;</span>
-                            <h4><a href="<?php echo $this->basePath('/kategori/roll_ups') . PHP_EOL; ?>" title="Roll-Ups">Roll-Ups</a></h4>
+                            <ul class='information'>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
+                                </li>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/kategori/roll_ups') . PHP_EOL; ?>" title="Roll-Ups">Roll-Ups</a>
+                                </li>
+                            </ul>
 
                             <div class="price">
                                 <p class="fran">från</p>
@@ -129,8 +134,15 @@
                                 </ul>
                             </div>
 
-                            <h3>Roll-Up Professional</h3>
-                            <h4>Expolinc</h4>
+                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_professional') . PHP_EOL; ?>" title="Roll-Up Professional">Roll-Up Professional</a></h3>
+                            <ul class='information'>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
+                                </li>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/kategori/roll_ups') . PHP_EOL; ?>" title="Roll-Ups">Roll-Ups</a>
+                                </li>
+                            </ul>
 
                             <div class="price">
                                 <p class="fran">från</p>
@@ -186,8 +198,15 @@
                                 </ul>
                             </div>
 
-                            <h3>Roll-Up Compact</h3>
-                            <h4>Expolinc</h4>
+                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_compact') . PHP_EOL; ?>" title="Roll-Up Compact">Roll-Up Compact</a></h3>
+                            <ul class='information'>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
+                                </li>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/kategori/roll_ups') . PHP_EOL; ?>" title="Roll-Ups">Roll-Ups</a>
+                                </li>
+                            </ul>
 
                             <div class="price">
                                 <p class="fran">från</p>
@@ -240,8 +259,15 @@
                                 </ul>
                             </div>
 
-                            <h3>Case &amp; Counter</h3>
-                            <h4>Expolinc</h4>
+                            <h3><a href="<?php echo $this->basePath('/produkter/case_and_counter') . PHP_EOL; ?>" title="Case &amp; Counter">Case &amp; Counter</a></h3>
+                            <ul class='information'>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/tillverkare/expolinc'). PHP_EOL; ?>" title="Expolinc">Expolinc</a>
+                                </li>
+                                <li>
+                                    <a href="<?php echo $this->basePath('/kategori/diskar_och_podium') . PHP_EOL; ?>" title="Roll-Ups">Diskar &amp; Podium</a>
+                                </li>
+                            </ul>
 
                             <div class="price">
                                 <p class="fran">från</p>
