image slidebox for products +page

--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -65,9 +65,38 @@
 
                         <div class="image">
                             <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
+                            <div class="left"></div>
                             <div class="carousel">
-                                <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="focus">
+                                
+                                <ul>
+                                    <li>
+                                        <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="focus">
+                                    </li>
+                                    <li>
+                                        <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="">
+                                    </li>
+                                    <li>
+                                        <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="">
+                                    </li>
+                                    <li>
+                                        <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="">
+                                    </li>
+                                    <li>
+                                        <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="">
+                                    </li>
+                                </ul>
+                                
                             </div>
+                            <div class="right"></div>
+                                
+                            <div style="display:block;width:auto;margin: 0px auto;text-align:center;">
+                                <a href="#" style="display:inline-block;box-sizing: border-box;height:10px;width:10px;background-color:#999;border-radius:5px;margin-right:5px;"></a>
+                                <a href="#" style="display:inline-block;box-sizing: border-box;height:10px;width:10px;background-color:transparent;border: 2px solid #999;border-radius:5px;margin-right:5px;"></a>
+                                <a href="#" style="display:inline-block;box-sizing: border-box;height:10px;width:10px;background-color:transparent;border: 2px solid #999;border-radius:5px;margin-right:5px;"></a>
+                                <a href="#" style="display:inline-block;box-sizing: border-box;height:10px;width:10px;background-color:transparent;border: 2px solid #999;border-radius:5px;margin-right:5px;"></a>
+                                <a href="#" style="display:inline-block;box-sizing: border-box;height:10px;width:10px;background-color:transparent;border: 2px solid #999;border-radius:5px;margin-right:5px;"></a>
+                            </div>
+                            
                         </div>
 
                         <div class="content">
