--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -192,6 +192,7 @@
                         </li>
                     </ul>
                 </div>
+                <?php echo $this->navigation()->breadcrumbs()->render(); ?>
                 <!--
                 <div id="breadcumbs_wrapper">
                     <ul id="breadcrumbs">
