--- a/public/plugins/ldscarousel/css/jquery.ldscarousel.css
+++ b/public/plugins/ldscarousel/css/jquery.ldscarousel.css
@@ -5,3 +5,149 @@
     Description:
         Purpose of the stylesheet follows.
 */
+
+.carousel_wrapper {
+    
+}
+
+.carousel_wrapper .carousel {
+    display: block;
+    position: relative;
+}
+
+.carousel_wrapper .carousel img:hover {
+    filter: blur(0px) grayscale(0%) !important;
+    -webkit-filter: blur(0px) grayscale(0%) !important;
+    opacity: 1.0 !important;
+    transform: scale(1.0) !important;
+    -webkit-transform: scale(1.0) !important;
+}
+
+.carousel_wrapper div.prev,
+.carousel_wrapper div.next {
+    display: block;
+    height: 100%;
+    width: 60px;
+    z-index: 10;
+}
+
+.carousel_wrapper div.prev a,
+.carousel_wrapper div.next a {
+    transition: all 300ms ease-in-out;
+    
+    display: block;
+    height: 60px;
+    width: 60px;
+    z-index: 10;
+    
+    position: relative;
+    top: 50%;
+    margin-top: -30px;
+    
+    border-radius: 30px;
+    
+    background-color: #000;
+    
+    opacity: 0.45;
+}
+
+.carousel_wrapper div.prev a:hover,
+.carousel_wrapper div.next a:hover {
+    background-color: #0290D0;
+    opacity: 0.85;
+}
+.carousel_wrapper div.next {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.carousel_wrapper div.next a {
+    position: relative;
+    right: -60px;
+}
+
+.carousel_wrapper div.next a img {
+    position: absolute;
+    top: 15px;
+    left: 9.5px;
+}
+
+.carousel_wrapper:hover div.next a {
+    right: -30px;
+}
+
+.carousel_wrapper div.next.inactive a,
+.carousel_wrapper:hover div.next.inactive a {
+    right: -60px !important;
+}
+
+.carousel_wrapper div.prev {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.carousel_wrapper div.prev a {
+    position: relative;
+    left: -60px;
+}
+
+.carousel_wrapper div.prev a img {
+    position: absolute;
+    top: 15px;
+    right: 9.5px;
+}
+
+.carousel_wrapper:hover div.prev a {
+    left: -30px;
+}
+
+.carousel_wrapper div.prev.inactive a,
+.carousel_wrapper:hover div.prev.inactive a {
+    left: -60px !important;
+}
+
+.carousel_wrapper .navigation {
+    display:block;
+    width:auto;
+    margin: 0px auto;
+    text-align:center;
+}
+
+.carousel_wrapper .navigation a {
+    transition: all 300ms ease-in-out;
+    
+    display:inline-block;
+    box-sizing: border-box;
+    height:10px;
+    width:10px;
+    background-color:transparent;
+    border: 2px solid #999;
+    border-radius:5px;
+    margin-right:5px;
+}
+
+.carousel_wrapper .navigation a.focus {
+    display:inline-block;
+    box-sizing: border-box;
+    height:10px;
+    width:10px;
+    background-color:#0290D0;
+    border-color: #0290D0;
+    border-radius:5px;
+    margin-right:5px;
+    box-shadow: 0px 0px 2px #0290D0;
+}
+
+.carousel_wrapper .navigation a:hover {
+    background-color: #bbb;
+    border-color: #999;
+    box-shadow: 0px 0px 2px #999;
+}
+
+.carousel_wrapper .navigation a.focus:hover {
+    background-color: #0290D0;
+    border-color: #0290D0;
+    box-shadow: 0px 0px 2px #0290D0;
+}
