--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -15,8 +15,7 @@
                         ->prependStylesheet( $this->basePath('/css/layout.css') ); ?>
 
         <!-- Scripts -->
-        <?php echo $this->headScript()->prependFile( $this->basePath( 'js/speedprint.js' ) )
-                                      ->prependFile( $this->basePath( 'plugins/dotdotdot/jquery.dotdotdot.min.js' ) )
+        <?php echo $this->headScript()->prependFile( $this->basePath( 'plugins/dotdotdot/jquery.dotdotdot.min.js' ) )
                                       ->prependFile( $this->basePath( 'js/jquery.transit.min.js' ) )
                                       ->prependFile( '//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js' )
                                       ->prependFile( '//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js' )?>
