--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -82,17 +82,17 @@
                                 
                                 <ul>
                                     <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" data-fancybox-group="roll_up_classic_carousel" class="fancybox">
+                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" data-fancybox-group="roll_up_classic_carousel" title="Roll-Up Classic" class="fancybox">
                                             <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="focus">
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_mekanik.png'); ?>" data-fancybox-group="roll_up_classic_carousel" class="fancybox">
+                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_mekanik.png'); ?>" data-fancybox-group="roll_up_classic_carousel" title="Roll-Up Classic, Mekanik" class="fancybox">
                                             <img src="<?php echo $this->basePath('img/produkter/rollup_classic_mekanik.png'); ?>" alt="Roll-Up Classic" class="">
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_komponenter.png'); ?>" data-fancybox-group="roll_up_classic_carousel" class="fancybox">
+                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_komponenter.png'); ?>" data-fancybox-group="roll_up_classic_carousel" title="Roll-Up Classic, Komponenter" class="fancybox">
                                             <img src="<?php echo $this->basePath('img/produkter/rollup_classic_komponenter.png'); ?>" alt="Roll-Up Classic" class="">
                                         </a>
                                     </li>
