more product carousel and fancybox fixes

--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -117,11 +117,11 @@
                             </div>
                                 
                             <div class="navigation">
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" class="focus"></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"></a>
+                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" class="focus"><span></span></a>
+                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
+                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
+                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
+                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
                             </div>
                             
                         </div>
