--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -17,6 +17,7 @@
         <!-- Scripts -->
         <?php echo $this->headScript()->prependFile( $this->basePath( 'plugins/dotdotdot/jquery.dotdotdot.min.js' ) )
                                       ->prependFile( $this->basePath( 'js/jquery.transit.min.js' ) )
+                                      // ->prependFile( 'http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js' )
                                       ->prependFile( '//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js' )
                                       ->prependFile( '//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js' )?>
         
@@ -122,7 +123,9 @@
             <!-- Sociala Medier -->
             <div class="content" data-tab="social_media" id="social_media">
                  <h2>Facebook</h2>
+                 <!--
                  <div class="fb-like-box" data-href="https://www.facebook.com/StlReklam" data-width="95%" data-show-faces="true" data-header="true" data-stream="true" data-show-border="false" style="display: block; margin: 0 auto;"></div>
+                 -->
             </div>
 
             <!-- Tabs -->
