--- a/public/plugins/ldscarousel/css/jquery.ldscarousel.css
+++ b/public/plugins/ldscarousel/css/jquery.ldscarousel.css
@@ -132,6 +132,7 @@
     
     display:inline-block;
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
     height:10px;
     width:10px;
     background-color:transparent;
@@ -143,6 +144,7 @@
 .carousel_wrapper .navigation a.focus {
     display:inline-block;
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
     height:10px;
     width:10px;
     background-color:#0290D0;
